--- a/YBackend/Y.Domain/Y.Domain.csproj
+++ b/YBackend/Y.Domain/Y.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
