--- a/YBackend/Y.Application/Y.Application.csproj
+++ b/YBackend/Y.Application/Y.Application.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="BCrypt" Version="1.0.0" />
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="7.0.3" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
